First complete draft

--- a/production.bib
+++ b/production.bib
@@ -21,6 +21,7 @@
 	date-modified = {2022-12-01 10:45:24 +0100},
 	journal = {ACM Computing Surveys},
 	title = {State of Practical Applicability of Regression Testing Research: A Live Systematic Literature Review},
+	journal={ACM Computing Surveys (CSUR)},
 	note = "Note: currently in pre-print; recommended for publication in November/2022"}
 
 @inproceedings{greca_comparing_2022_p,
