--- a/secondaries.bib
+++ b/secondaries.bib
@@ -298,7 +298,7 @@ Conclusion: Test case prioritization has already been considerably discussed in 
 
 @article{rosero_15_2016,
 	abstract = {Software regression testing techniques verify previous functionalities each time software modifications occur or new characteristics are added. With the aim of gaining a better understanding of this subject, in this work we present a survey of software regression testing techniques applied in the last 15 years; taking into account its application domain, kind of metrics they use, its application strategies and the phase of the software development process where they are applied. From an outcome of 460 papers, a set of 25 papers describing the use of 31 software testing regression techniques were identified. Results of this survey suggest that at the time of applying a regression testing techniques, metrics like cost and fault detection efficiency are the most relevant. Most of the techniques were assessed with instrumented programs (experimental cases) under academic settings. Conversely, we observe a minimum set of software regression techniques applied in industrial settings, mainly, under corrective and maintenance approaches. Finally, we observe a trend using some regression techniques under agile approaches. {\copyright} 2016 World Scientific Publishing Company.},
-	author = {Rosero, Ra{\'u}l H. and G{\'o}mez, Omar S. and Rodr{\'\i}guez, Glen},
+	author = {Rosero, Ra{\'u}l H. and G{\'o}mez, Omar S. and Rodr{\'i}guez, Glen},
 	date-added = {2022-11-17 11:55:42 +0100},
 	date-modified = {2022-11-17 11:55:42 +0100},
 	doi = {10.1142/S0218194016300013},
