--- a/slr.bib
+++ b/slr.bib
@@ -550,24 +550,7 @@
 	file = {2020 Empirically revisiting and enhancing IR-based test-case prioritization.pdf:/Users/renangreca/Zotero/storage/H7ZUB6IN/2020 Empirically revisiting and enhancing IR-based test-case prioritization.pdf:application/pdf},
 }
 
-@inproceedings{kwon_cost-effective_2017,
-	address = {Nanjing},
-	title = {Cost-{Effective} {Regression} {Testing} {Using} {Bloom} {Filters} in {Continuous} {Integration} {Development} {Environments}},
-	isbn = {978-1-5386-3681-7},
-	url = {http://ieeexplore.ieee.org/document/8305938/},
-	doi = {10.1109/APSEC.2017.22},
-	abstract = {Regression testing in continuous integration development environments must be cost-effective and should provide fast feedback on test suite failures to the developers. In order to provide faster feedback on failures to developers while using computing resources efﬁciently, two types of regression testing techniques have been developed: Regression Testing Selection (RTS) and Test Case Prioritization (TCP). One of the factors that reduces the effectiveness of the RTS and TCP techniques is the inclusion of test suites that fail only once over a period. We propose an approach based on Bloom ﬁltering to exclude such test suites during the RTS process, and to assign such test suites with a lower priority during the TCP process. We experimentally evaluate our approach using a Google dataset, and demonstrate that cost-effectiveness of the proposed RTS and TCP techniques outperforms the state-of-the-art techniques.},
-	language = {en},
-	urldate = {2021-05-11},
-	booktitle = {2017 24th {Asia}-{Pacific} {Software} {Engineering} {Conference} ({APSEC})},
-	publisher = {IEEE},
-	author = {Kwon, Jung-Hyun and Ko, In-Young},
-	month = dec,
-	year = {2017},
-	keywords = {\_tablet},
-	pages = {160--168},
-	file = {2017 Cost-Effective Regression Testing Using Bloom Filters in Continuous Integration.pdf:/Users/renangreca/Zotero/storage/9QWTF7BG/2017 Cost-Effective Regression Testing Using Bloom Filters in Continuous Integration.pdf:application/pdf},
-}
+ser
 
 @inproceedings{tahvili_dynamic_2016,
 	address = {Chicago, IL, USA},
@@ -859,7 +842,7 @@
 	volume = {34},
 	url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-85063625583&doi=10.1007%2fs11390-019-1917-9&partnerID=40&md5=202f466788254dfaaf0026d69e9a916a},
 	doi = {10.1007/s11390-019-1917-9},
-	abstract = {Inspecting and testing code changes typically require a significant amount of developer effort. As a system evolves, developers often create composite changes by mixing multiple development issues, as opposed to addressing one independent issue — an atomic change. Inspecting composite changes often becomes time-consuming and error-prone. To test unrelated edits on composite changes, rerunning all regression tests may require excessive time. To address the problem, we present an interactive technique for change decomposition to support code reviews and regression test selection, called ChgCutter. When a developer specifies code change within a diff patch, ChgCutter partitions composite changes into a set of related atomic changes, which is more cohesive and self-contained regarding the issue being addressed. For composite change inspection, it generates an intermediate program version that only includes a related change subset using program dependence relationships. For cost reduction during regression testing, it safely selects only affected tests responsible for changes to an intermediate version. In the evaluation, we apply ChgCutter to 28 composite changes in four open source projects. ChgCutter partitions these changes with 95.7\% accuracy, while selecting affected tests with 89.0\% accuracy. We conduct a user study with professional software engineers at PayPal and find that ChgCutter is helpful in understanding and validating composite changes, scaling to industry projects. © 2019, Springer Science+Business Media, LLC \& Science Press, China.},
+	abstract = {Inspecting and testing code changes typically require a significant amount of developer effort. As a system evolves, developers often create composite changes by mixing multiple development issues, as opposed to addressing one independent issue --- an atomic change. Inspecting composite changes often becomes time-consuming and error-prone. To test unrelated edits on composite changes, rerunning all regression tests may require excessive time. To address the problem, we present an interactive technique for change decomposition to support code reviews and regression test selection, called ChgCutter. When a developer specifies code change within a diff patch, ChgCutter partitions composite changes into a set of related atomic changes, which is more cohesive and self-contained regarding the issue being addressed. For composite change inspection, it generates an intermediate program version that only includes a related change subset using program dependence relationships. For cost reduction during regression testing, it safely selects only affected tests responsible for changes to an intermediate version. In the evaluation, we apply ChgCutter to 28 composite changes in four open source projects. ChgCutter partitions these changes with 95.7\% accuracy, while selecting affected tests with 89.0\% accuracy. We conduct a user study with professional software engineers at PayPal and find that ChgCutter is helpful in understanding and validating composite changes, scaling to industry projects. © 2019, Springer Science+Business Media, LLC \& Science Press, China.},
 	number = {2},
 	journal = {Journal of Computer Science and Technology},
 	author = {Guo, B. and Kwon, Y.-W. and Song, M.},
@@ -867,6 +850,15 @@
 	keywords = {\_tablet},
 	pages = {416--436},
 	file = {2019 Decomposing Composite Changes for Code Review and Regression Test Selection in.pdf:/Users/renangreca/Zotero/storage/6FFCVNCE/2019 Decomposing Composite Changes for Code Review and Regression Test Selection in.pdf:application/pdf},
+}
+
+@inproceedings{kwon_cost-effective_2017,
+  title={Cost-effective regression testing using bloom filters in continuous integration development environments},
+  author={Kwon, Jung-Hyun and Ko, In-Young},
+  booktitle={2017 24th Asia-Pacific Software Engineering Conference (APSEC)},
+  pages={160--168},
+  year={2017},
+  organization={IEEE}
 }
 
 @inproceedings{yackley_simultaneous_2019,
