--- a/tables/efficiency.tex
+++ b/tables/efficiency.tex
@@ -166,7 +166,7 @@
 %\end{flushleft}
 %\end{table}
 
-\begin{table}[!t]
+\begin{table*}[!t]
   \centering
    \tabcolsep=0.105cm
   \begin{tabular}{lrrrrr}
@@ -211,4 +211,4 @@
 \end{flushleft}
 \caption{Average Running Times (in ms).}
 %\vspace{-3mm}
-\end{table}
+\end{table*}
