--- a/tables/tab_relevance.tex
+++ b/tables/tab_relevance.tex
@@ -69,11 +69,11 @@
 \begin{center}
 \rowcolors{2}{}{gray!10}
 \setlength{\tabcolsep}{2pt}
-\begin{tabular}{l llllll | l llllll | l llllll | l llllll | l llllll}
+\begin{tabular}{l llllll | l llllll | l llllll | l llllll}% | l llllll}
 \toprule
-\relevanceheader & \relevanceheader & \relevanceheader & \relevanceheader & \relevanceheader \\ 
+\relevanceheader & \relevanceheader & \relevanceheader & \relevanceheader \\ 
 \midrule
-\input{tables/csv_relevance.tex}
+\input{tables/csv_relevance_4.tex}
 \end{tabular}
 \end{center}
 \scriptsize 
